tests/algorithms/x/Elixir/graphs/page_rank.error
run: exit status 1
    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 55 │       {i, ranks} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs:55:8: Main.page_rank/3

    error: undefined variable "nodes"
    │
 74 │     {nodes} = Enum.reduce(Process.get(:names), {nodes}, fn name, {nodes} ->
    │                                                 ^^^^^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs:74:49: Main.main/0

     warning: variable "ci" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 101 │         {ci, nodes} = try do
     │          ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs:101:10: Main.main/0

     error: undefined variable "ri"
     │
 114 │         while_fun_2.(while_fun_2, nodes, ri)
     │                                          ^^
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs:114:42: Main.main/0

     warning: variable "nodes" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 113 │     {nodes, ri} = try do
     │      ~~~~~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs:113:6: Main.main/0

     warning: variable "ri" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 113 │     {nodes, ri} = try do
     │             ~~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs:113:13: Main.main/0

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/graphs/page_rank.exs: cannot compile module Main (errors have been logged)

